testsuite/tests/annotations/should_fail/annfail08.stderr

annfail08.hs:9:1: error:
    • No instance for (Data.Data.Data (a0 -> a0))
        arising from an annotation
        (maybe you haven't applied a function to enough arguments?)
    • In the annotation: {-# ANN f (id + 1) #-}

annfail08.hs:9:15: error:
    • No instance for (Num (a0 -> a0)) arising from a use of ‘+’
        (maybe you haven't applied a function to enough arguments?)
    • In the annotation: {-# ANN f (id + 1) #-}
